# ai-code-review-bot

./: .gitignore  MARKETPLACE_GUIDE.md  PRIVACY.md  README.md  TERMS.md  deploy_github_app.py  github-app-manifest.json  pyproject.toml  requirements.txt  test_inline.py  test_inline_v2.py  test_vulnerable.py
.github/workflows/: pages.yml
.serverless/: meta.json
landing-page/: ai-code-review-bot-skills-2026.txt  index.html  privacy.html  skills.html  support.html
landing-page/blog/: ai-agent-tools-guide-2026.html  china-global-compliance.html  china-saas-global-compliance.html  chinese-seo-compliance.html  compliance-checker-tool.html  geo-brand-crisis-2026.html  geo-optimization-guide.html  geo-tool-2026.html  xiaohongshu-banned-words.html
scf/: bot_github_app.py  bot_single.py  install_deps.py
scf/app/: index.py
scf/app/ai_code_review_bot/: config.py  github.py
scf/layer/python/pydantic_settings-2.14.1.dist-info/: RECORD
scf/layer_python/python/rsa-4.9.1.dist-info/: RECORD
src/ai_code_review_bot/: __init__.py  reviewer.py  webhook.py
tests/: test_bot.py
